--- a/goal_sight/pubspec.yaml
+++ b/goal_sight/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  
+  # Phase 2 Dependencies
+  sqflite: ^2.3.0
+  path: ^1.8.3
+  provider: ^6.1.1
+  http: ^1.1.0
+  image_picker: ^1.0.5
+  fl_chart: ^0.66.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
