--- a/goal_sight/pubspec.yaml
+++ b/goal_sight/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   image_picker: ^1.0.5
   fl_chart: ^0.66.0
   shared_preferences: ^2.2.2
+  firebase_core: ^4.3.0
+  cloud_firestore: ^6.1.1
+  flutter_launcher_icons: ^0.14.4
+  flutter_native_splash: ^2.4.1
 
 dev_dependencies:
   flutter_test:
@@ -97,3 +101,21 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+# flutter_launcher_icons configuration
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  remove_alpha_ios: true
+
+# flutter_native_splash configuration
+flutter_native_splash:
+  color: "#0A0A0F"
+  image: assets/splash/splash_icon.png
+  android: true
+  ios: true
+  web: true
+  android_gravity: center
+  ios_content_mode: center
+  web_image_mode: center
